--- a/doctorbackend/.env
+++ b/doctorbackend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://balajikumar7061:balajikumar70@cluster0.jxckgrw.mongodb.net/doctors
+MONGO_URI="mongodb+srv://anushka728208:anushka7282@cluster0.ch0fkjc.mongodb.net/doctorappointment"
 CLOUDINARY_NAME=deqfvijtt
 CLOUDINARY_API_KEY=972563772279466
 CLOUDINARY_SECRET_KEY=Z_b4xBKlJVFz7QhkaJZppiF0fy4
