--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,1 @@
-# VITE_BACKEND_URL=http://localhost:5000
-VITE_BACKEND_URL=https://clinic-4k5p.onrender.com
-# VITE_BACKEND_URL=https://clinic-4k5p.onrender.com
+VITE_BACKEND_URL=http://localhost:5000
