--- a/admin/.env
+++ b/admin/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL='http://localhost:5000'
-# VITE_BACKEND_URL='https://clinic-4k5p.onrender.com'
+# VITE_BACKEND_URL='http://localhost:5000'
+VITE_BACKEND_URL='https://appoint-y208.onrender.com'
